--- a/StackoverflowLight/Views/Home/Index.cshtml
+++ b/StackoverflowLight/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿@model List<StackoverflowLight.Domain.Question>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@foreach(var question in Model)
+{
+    <h1>@question.Title</h1>
+    <h4>@question.Description</h4>
+    @foreach(var comment in question.Comments)
+    {
+        <p>@comment.Description</p>
+    }
+}
