--- a/StackoverflowLight/wwwroot/css/site.css
+++ b/StackoverflowLight/wwwroot/css/site.css
@@ -54,3 +54,30 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.questionBar{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-content:center;
+    background-color:#f6f5f6;
+    width:100%;
+    height:50px;
+    padding:10px;
+}
+
+.group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 24px;
+}
+
+.group p{
+    margin:0;
+}
+
+.title{
+    margin:20px;
+}
