--- a/StackoverflowLight/Views/Question/Index.cshtml
+++ b/StackoverflowLight/Views/Question/Index.cshtml
@@ -1,8 +1,57 @@
-﻿
+﻿@model StackoverflowLight.Domain.Question
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-<p>Button werkt</p>
+<div class="card question">
+    <h1 class="card-title margin darkText">@Model.Title</h1>
+    <p class="card-text margin darkText"> @Model.Description</p>
+    <p class="card-text margin dark-grey-text">~ @Model.Username</p>
+    <div class="questionBar card-body lightBackground">
+        <div class="group">
+            <i class="far fa-comment text-white"></i>
+            <p class="text-white">@Model.Comments.Count</p>
+        </div>
+        <div class="group" style="font-size:20px;">
+            <a asp-controller="Comment" asp-action="Create" asp-route-id="@Model.QuestionId">
+                <div class="titleButton">
+                    <i class="fas fa-plus text-white"></i>
+                    <p class="text-white">Add comment</p>
+                </div>
+            </a>
+        </div>
+        <div class="group">
+            <a asp-controller="Question" asp-action="UpvoteAsync" asp-route-id="@Model.QuestionId">
+                <i class="far fa-arrow-alt-circle-up @(Model.UpvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+            </a>
+            <p class="text-white">@Model.UpvotedBy.Count</p>
+            <a asp-controller="Question" asp-action="DownvoteAsync" asp-route-id="@Model.QuestionId">
+                <i class="far fa-arrow-alt-circle-down @(Model.DownvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+            </a>
+            <p class="text-white">@Model.DownvotedBy.Count</p>
+        </div>
+    </div>
+</div>
+
+@foreach (var comment in Model.Comments)
+{
+    <div class="comment card">
+        <h6 class="card-title margin darkText">REPLY</h6>
+        <p class="card-text margin darkText"> @comment.Description</p>
+        <p class="card-text margin dark-grey-text">~ @comment.Username</p>
+        <div class="questionBar card-body lightBackground">
+            <div class="group">
+                <a asp-controller="Comment" asp-action="UpvoteAsync" asp-route-commentId="@comment.CommentId" asp-route-questionId="@Model.QuestionId">
+                    <i class="far fa-arrow-alt-circle-up @(comment.UpvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+                </a>
+                <p class="text-white">@comment.UpvotedBy.Count</p>
+                <a asp-controller="Comment" asp-action="DownvoteAsync" asp-route-commentId="@comment.CommentId" asp-route-questionId="@Model.QuestionId">
+                    <i class="far fa-arrow-alt-circle-down @(comment.DownvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+                </a>
+                <p class="text-white">@comment.DownvotedBy.Count</p>
+            </div>
+        </div>
+    </div>
+}
+
 
