--- a/StackoverflowLight/Views/Home/Index.cshtml
+++ b/StackoverflowLight/Views/Home/Index.cshtml
@@ -2,14 +2,14 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<a asp-controller="Question" asp-action="Create">
-    <button class="btn btn-info">Add question</button>
+<a class="btn btn-info noTxtDecoration" asp-controller="Question" asp-action="Create">
+   Add question
 </a>
 
 @foreach (var question in Model)
 {
     <div class="question card">
-        <a class="noTxtDecoration" asp-controller="Question" asp-action="Index" asp-route-id="@question.QuestionId">
+        <a class="noTxtDecoration" asp-controller="Question" asp-action="Index" asp-route-id="@question.PostId">
             <div class="titleButton">
                 <h1 class="card-title margin darkText">@question.Title</h1>
                 <i class="fas fa-arrow-alt-circle-right darkText margin"></i>
@@ -22,14 +22,14 @@
                 <p class="text-white">@question.Comments.Count</p>
             </div>
             <div class="group">
-                <a asp-controller="Question" asp-action="UpvoteAsync" asp-route-id="@question.QuestionId">
-                    <i class="far fa-arrow-alt-circle-up @(question.UpvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+                <a asp-controller="Question" asp-action="UpvoteAsync" asp-route-id="@question.PostId">
+                    <i class="far fa-arrow-alt-circle-up @(question.Upvotes.Select(user=>user.User.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
                 </a>
-                <p class="text-white">@question.UpvotedBy.Count</p>
-                <a asp-controller="Question" asp-action="DownvoteAsync" asp-route-id="@question.QuestionId">
-                    <i class="far fa-arrow-alt-circle-down @(question.DownvotedBy.Select(user=>user.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
+                <p class="text-white">@question.Upvotes.Count</p>
+                <a asp-controller="Question" asp-action="DownvoteAsync" asp-route-id="@question.PostId">
+                    <i class="far fa-arrow-alt-circle-down @(question.Downvotes.Select(user=>user.User.UserName).Contains(User.Identity.Name)?"darkText":"text-white")"></i>
                 </a>
-                <p class="text-white">@question.DownvotedBy.Count</p>
+                <p class="text-white">@question.Downvotes.Count</p>
             </div>
         </div>
     </div>
